# luster-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  test.yml
docs/: CODE_STYLE.md  TESTING.md
scripts/: ci-validation.ps1
shaders/: triangle.vert  triangle.vert.spv
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.hpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  config.hpp  core.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp  types.hpp  window.cpp  window.hpp
src/core/ecs/: component_storage.hpp  components.hpp  entity_manager.hpp  registry.hpp  system.hpp  types.hpp
src/core/gfx/: buffer.cpp  buffer.hpp  command_context.cpp  command_context.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  framebuffers.cpp  framebuffers.hpp  gpu_profiler.cpp  gpu_profiler.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vertex_layout.hpp
src/core/utils/: fps_counter.hpp  log.cpp  log.hpp  profiler.hpp
tests/: CMakeLists.txt  test_main.cpp  test_vulkan_init.cpp
